<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <!-- Back Button -->
            <ImageView
                android:id="@+id/go_back_view_event"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <!-- Title Text -->
            <TextView
                android:id="@+id/view_details_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:alpha="0.8"
                android:gravity="center"
                android:maxWidth="300dp"
                android:text="@string/view_details"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/go_back_view_event"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Edit Event Button with Icon and Text -->
            <LinearLayout
                android:id="@+id/DeleteEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/EditEvent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    android:elevation="10dp"
                    android:src="@drawable/baseline_delete_24"
                    app:tint="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/EditEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/draw_button"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    android:elevation="10dp"
                    android:src="@drawable/ic_edit"
                    app:tint="@color/white" />

            </LinearLayout>

            <!-- Entrants Button with Icon and Text -->
            <LinearLayout
                android:id="@+id/draw_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    android:elevation="10dp"
                    android:src="@drawable/baseline_people_alt_24"
                    app:tint="@color/white" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Event Poster -->
        <ImageView
            android:id="@+id/poster_pic_Display"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_upload" />

        <!-- Event Title -->
        <TextView
            android:id="@+id/ViewEventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:fontFamily="@font/sansation_bold"
            android:padding="12dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:text="Event Title" />

        <!-- Divider -->

        <!-- Event Capacity -->
        <TextView
            android:id="@+id/ViewEventCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:fontFamily="@font/sansation_bold"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="16sp"
            tools:text="Capacity: 100" />

        <!-- Event Description -->
        <TextView
            android:id="@+id/ViewEventDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="5"
            android:padding="12dp"

            android:textColor="@color/white"
            android:layout_gravity="center"
            android:fontFamily="@font/sansation_bold"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="16sp"
            tools:text="Event Description: This is a sample description for the event." />

        <!-- Divider -->

        <!-- Event Date and Time -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ViewEventTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:padding="12dp"
                android:textColor="@color/white"
                android:fontFamily="@font/sansation_bold"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_clock"
                tools:text="Time: 7:00 PM" />

            <TextView
                android:id="@+id/ViewEventDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:padding="12dp"
                android:fontFamily="@font/sansation_bold"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_calendar"
                tools:text="Date: 12/12/2023" />
        </LinearLayout>

        <!-- Event Location -->
        <TextView
            android:id="@+id/ViewEventLoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:fontFamily="@font/sansation_bold"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_location"
            tools:text="Location: University Hall" />

        <Button
            android:id="@+id/join_waitlist_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/Button.White"
            android:fontFamily="@font/sansation_bold"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:backgroundTint="#003366"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:padding="10dp"
            android:text="@string/pending"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/show_QR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#416E92"
            android:contentDescription="@string/qr_code"
            android:enabled="true"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:layout_gravity="center"
            android:foreground="@drawable/baseline_qr_code_scanner_24"
            android:foregroundGravity="center"
            android:foregroundTint="@color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
